can be merged with main

--- a/models/caformer.ipynb
+++ b/models/caformer.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,8 @@
     "    class_ids_to_include=class_ids_to_include  # Pass the list of class IDs\n",
     ")\n",
     "\n",
+    "print(f\"Number of samples in dataset: {len(full_dataset)}\")\n",
+    "\n",
     "# Split into training and validation sets\n",
     "train_indices, val_indices = train_test_split(\n",
     "    list(range(len(full_dataset))), test_size=0.2, random_state=42\n",
@@ -102,7 +104,9 @@
     "    train_dataset,\n",
     "    batch_size=config[\"batch_size\"],\n",
     "    shuffle=True,\n",
-    "    num_workers=0,\n",
+    "    num_workers=1,\n",
+    "    prefetch_factor=0,  # Prefetch batches to improve performance\n",
+    "    pin_memory=True,  # Optimize for GPU\n",
     "    collate_fn=fungi_collate_fn, \n",
     "    drop_last=True  # Drops the last incomplete batch\n",
     ")\n",
@@ -111,9 +115,11 @@
     "    val_dataset,\n",
     "    batch_size=config[\"batch_size\"],\n",
     "    shuffle=False,\n",
-    "    num_workers=0,\n",
+    "    num_workers=1,\n",
+    "    prefetch_factor=0,\n",
+    "    pin_memory=True,\n",
     "    collate_fn=fungi_collate_fn,\n",
-    "    drop_last=True  # also\n",
+    "    drop_last=True # also\n",
     ")\n",
     "\n",
     "print(f\"Length of train_loader: {len(train_loader)} and val_loader: {len(val_loader)}\")"
@@ -769,56 +775,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a custom color palette\n",
-    "custom_colors = ['#FFA500',  # Orange\n",
-    "                 '#FFC0CB',  # Pink\n",
-    "                 '#000000',  # Black\n",
-    "                 '#FF4500']  # Autumn-like color (OrangeRed)\n",
-    "\n",
-    "# cmap = sns.color_palette(\"autumn\", as_cmap=True)\n",
-    "\n",
-    "def conf_matrix(targets, predictions, task_name, plot=True, colors=None):\n",
+    "def conf_matrix(targets, predictions, task_name, matrix_type='species', colors=None):\n",
     "    \"\"\"\n",
-    "    Compute and plot a 2x2 confusion matrix.\n",
+    "    Compute and plot a confusion matrix with customizable display and colors.\n",
     "\n",
     "    Args:\n",
     "        targets: True labels.\n",
     "        predictions: Predicted labels.\n",
     "        task_name: Name of the task (e.g., 'Species', 'Toxicity').\n",
-    "        plot: Whether to plot the confusion matrix.\n",
-    "        colors: List of colors for the heatmap.\n",
+    "        matrix_type: Type of matrix ('species' or 'toxicity') for specific display logic.\n",
+    "        colors: Custom color palette.\n",
     "    \"\"\"\n",
+    "    from sklearn.metrics import confusion_matrix\n",
+    "    import seaborn as sns\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "\n",
     "    # Compute confusion matrix\n",
     "    cm = confusion_matrix(targets, predictions)\n",
-    "    \n",
-    "    if plot:\n",
+    "\n",
+    "    if matrix_type == 'species':\n",
+    "        # For Species Misclassification Matrix\n",
+    "        plt.figure(figsize=(6, 1))  # Wide and short, single row\n",
+    "        sns.set(font_scale=1.4)\n",
+    "\n",
+    "        # Define colors: Red for misclassified, Green for recognized\n",
+    "        cmap = sns.color_palette(['green', 'red']) if not colors else sns.color_palette(colors)\n",
+    "\n",
+    "        sns.heatmap(\n",
+    "            cm[:1],  # Only show the first row\n",
+    "            annot=True,\n",
+    "            fmt='d',\n",
+    "            cmap=cmap,\n",
+    "            cbar=False,\n",
+    "            xticklabels=['Missclassified', 'Recognized'],  # Bottom labels\n",
+    "            yticklabels=[]  # Remove true labels from the side\n",
+    "        )\n",
+    "        plt.xlabel('Predicted')\n",
+    "        plt.title(f'{task_name} Misclassification Matrix')\n",
+    "        plt.show()\n",
+    "\n",
+    "    if matrix_type == 'toxicity':\n",
+    "        # For Toxicity Matrix\n",
     "        plt.figure(figsize=(6, 5))\n",
-    "        sns.set(font_scale=1.4)  # Adjust to your preference\n",
-    "        \n",
-    "        # Define the color map\n",
-    "        if colors:\n",
-    "            cmap = sns.color_palette(colors)\n",
-    "        else:\n",
-    "            cmap = 'Blues'  # Default color map\n",
-    "        \n",
-    "        sns.heatmap(cm, annot=True, fmt='d', cmap=cmap, cbar=False,\n",
-    "                    xticklabels=['Negative', 'Positive'],\n",
-    "                    yticklabels=['Negative', 'Positive'])\n",
+    "        sns.set(font_scale=1.4)\n",
+    "\n",
+    "        # Assign unique indices to each cell type\n",
+    "        cell_type_indices = np.array([[0, 1], [2, 3]])  # TN, FP, FN, TP\n",
+    "\n",
+    "        # Define custom colors for each cell type\n",
+    "        if colors is None:\n",
+    "            colors = ['black', 'yellow', 'purple', 'black']  # TN, FP, FN, TP\n",
+    "\n",
+    "        # Create a custom colormap from the specified colors\n",
+    "        custom_cmap = ListedColormap(colors)\n",
+    "\n",
+    "        # Plot the heatmap using the cell_type_indices to map colors\n",
+    "        sns.heatmap(\n",
+    "            cell_type_indices,\n",
+    "            annot=cm,\n",
+    "            fmt='d',\n",
+    "            cmap=custom_cmap,\n",
+    "            cbar=False,\n",
+    "            xticklabels=['Negative', 'Positive'],\n",
+    "            yticklabels=['Negative', 'Positive']\n",
+    "        )\n",
     "        plt.xlabel('Predicted')\n",
     "        plt.ylabel('True')\n",
     "        plt.title(f'{task_name} Classification Confusion Matrix')\n",
     "        plt.show()\n",
-    "    \n",
+    "\n",
     "    return cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,21 +983,33 @@
     "        print(f\"  Val Loss:   {avg_val_loss:.4f}, Species Acc: {val_accuracy_species:.2f}%, Toxicity Acc: {val_accuracy_toxicity:.2f}%\")\n",
     "    \n",
     "        # Confusion Matrices\n",
-    "        # For Species Classification (convert to binary correct/incorrect)\n",
+    "        # For Species Classification\n",
     "        species_correct = np.array(val_predictions_species) == np.array(val_targets_species)\n",
     "        species_binary_predictions = species_correct.astype(int)  # 1 if correct, 0 if incorrect\n",
-    "        species_binary_targets = np.ones_like(species_binary_predictions)  # All ones (since correct=1)\n",
-    "    \n",
-    "        # For Toxicity Classification\n",
-    "        toxicity_binary_predictions = np.array(val_predictions_toxicity)\n",
-    "        toxicity_binary_targets = np.array(val_targets_toxicity)\n",
-    "    \n",
+    "        species_binary_targets = np.zeros_like(species_binary_predictions)  # All zeros (1 row for misclassification matrix)\n",
+    "\n",
     "        # Plot Confusion Matrix for Species Classification\n",
-    "        conf_matrix(species_binary_targets, species_binary_predictions, task_name='Species', colors=custom_colors)\n",
-    "    \n",
+    "        conf_matrix(\n",
+    "            species_binary_targets, \n",
+    "            species_binary_predictions, \n",
+    "            task_name='Species', \n",
+    "            matrix_type='species', \n",
+    "            colors=['red', 'green']  # Red for misclassified, Green for recognized\n",
+    "        )\n",
+    "\n",
+    "        # For Toxicity Classification\n",
+    "        toxicity_predictions = np.array(val_predictions_toxicity)\n",
+    "        toxicity_targets = np.array(val_targets_toxicity)\n",
+    "\n",
     "        # Plot Confusion Matrix for Toxicity Classification\n",
-    "        conf_matrix(toxicity_binary_targets, toxicity_binary_predictions, task_name='Toxicity', colors=custom_colors)\n",
-    "    \n",
+    "        conf_matrix(\n",
+    "            toxicity_targets, \n",
+    "            toxicity_predictions, \n",
+    "            task_name='Toxicity', \n",
+    "            matrix_type='toxicity', \n",
+    "            colors=['orange', 'yellow', 'purple', 'black']  # TN, FP, FN, TP\n",
+    "        )\n",
+    "        \n",
     "    return {\n",
     "        'train_losses': train_losses,\n",
     "        'val_losses': val_losses,\n",
@@ -984,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1397,11 @@
     "    val_loader=val_loader,\n",
     "    optimizer=optimizer,\n",
     "    num_epochs=num_epochs\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Save the model and statistics\n",
+    "torch.save(model.state_dict(), \"multi_fungi_model.pth\")\n",
+    "print(\"Training completed!\")"
    ]
   },
   {
