--- a/models/caformer.ipynb
+++ b/models/caformer.ipynb
@@ -793,6 +793,7 @@
     "    from sklearn.metrics import confusion_matrix\n",
     "    import seaborn as sns\n",
     "    import matplotlib.pyplot as plt\n",
+    "    from matplotlib.colors import ListedColormap\n",
     "    import numpy as np\n",
     "\n",
     "    # Compute confusion matrix\n",
